--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
               <p class="white-text"><span class="red-bordered-text">Подр</span>обнее</p>
           </div>
           <div class="card2">
-            <img src="./icon1.svg" alt="">
+            <img src="./icon.svg" alt="">
             <p class="small-white-text">Защитные пленки</p>
             <p class="text">Lorem ipsum dolor sit amet, <br>
                  consectetur adipiscing elit. <br>
@@ -226,7 +226,7 @@
        </div>
     </div>
       <div>
-        <div>
+        <div >
             <div class="icon-text-wrapper">
                 <img src="./icon.svg" alt="">
                 <p class="small-white-text">материалы от лучших компаний</p>
@@ -264,7 +264,7 @@
         <img src="./img/cars.svg" alt="" width="1680px">
     </div>
 </div>
-<footer>
+<footer class="footer">
     <div class="text-shape-wrapper">
         <h1 class="large-white-text">
             Наши работы
@@ -278,7 +278,7 @@
 <br><br>
         </form>
        <div class="contact-div">
-        <textarea>Вопрос по дизайну, тюнингу и др.</textarea>
+        <textarea class="textarea">Вопрос по дизайну, тюнингу и др.</textarea>
         <img src="./img/social-media.svg" alt="">
        </div>
     </div>
